# tripatlas

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build_and_deploy.yml  build_frontend.yml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx
libs/csvelo/: Cargo.toml
libs/csvelo/src/: builtin_field_parsers.rs  flatten.rs  lib.rs  parse_record.rs  records.rs
libs/csvelo/tests/: derive_test.rs
libs/csvelo_derive/: Cargo.toml
libs/csvelo_derive/src/: lib.rs
libs/gtfs_io/: Cargo.toml
libs/gtfs_io/tests/: test_load_gtfs.rs
libs/indexed_gtfs/: Cargo.toml
libs/indexed_gtfs/src/: lib.rs  structures.rs
libs/indexed_gtfs/tests/: test_load_gtfs.rs
libs/indexed_gtfs/tests/testdata/gtfs_dummy/: stops.txt
src/: cli.rs  cli_serve.rs  cli_serve_dev.rs  csv_parse.rs  indexed_gtfs.rs  main.rs  start_server.rs  tests.rs
tripatlas/: Cargo.toml  build.rs
tripatlas/frontend/: index.html  package-lock.json  package.json
tripatlas/frontend/src/: App.tsx  api.ts  main.tsx  map.ts
tripatlas/frontend/src/map_overlay/: map_overlay.ts
tripatlas/src/: cli.rs  cli_gtfs_merge.rs  cli_gtfs_stats.rs  cli_mobility_database.rs  cli_serve.rs  cli_serve_dev.rs  coordinates.rs  gtfs_dataset.rs  gtfs_sources.rs  gtfs_test_loader.rs  indexed_gtfs.rs  main.rs  mobility_database.rs  mobility_database_testing.rs  projection.rs  start_server.rs  tests.rs  util.rs
tripatlas/src/routes/: api_basics.rs  frontend.rs  mod.rs  stations.rs
