[package]
name = "tripatlas"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.27", features = ["derive"] }
parking_lot = "0.12.3"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"

[build-dependencies]
duct = "0.13.7"
walkdir = "2.5.0"
anyhow = "1.0.95"
