[package]
name = "tripatlas"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.27", features = ["derive"] }
parking_lot = "0.12.3"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
include_dir = "0.7.4"
mime_guess = "2.0.5"
actix-cors = "0.7.0"
reqwest = "0.12.12"
webbrowser = "1.0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
indoc = "2.0.5"
rayon = "1.10.0"
csvelo = { path = "../libs/csvelo" }
memmap2 = "0.9.5"

[build-dependencies]
duct = "0.13.7"
walkdir = "2.5.0"
anyhow = "1.0.95"
